@@ -1,3 +1,9 @@
+2012-12-20  Oliver Hunt  <oliver@apple.com>
+
+        Try to convince bots to be happy with testapi.
+
+        * API/JSScriptRefPrivate.h:
+
 2012-12-20  Michael Saboff  <msaboff@apple.com>
 
         JIT: Change uninitialized pointer value -1 to constant
